# certified-hardware-ampere

./: .gitmodules  Makefile  README.md  ansible.cfg  pyproject.toml
inventory/: ampere.yml
inventory/group_vars/: all.yml
playbooks/: ampere.yml
