[project]
name = "ampere-integration"
version = "0.0.0"
description = "OpenNebula deployment on Cloud Provider"
authors = ["OpenNebula <contact@opennebula.io>"]
license = "Apache-2.0"
readme = "README.md"

[tool.hatch.envs.ampere-default]
skip-install = true
installer = "uv"
dependencies = [
  "ansible-core"
]
